<resources>
    <string name="app_name">Location Fence</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="add_item">You don\'t have any addresses set up. \n Tap + to add one.</string>
    <string name="radius">Radius</string>
    <string name="blocked_apps">blocked apps</string>
    <string name="all_apps">All apps</string>
    <string name="blacklist">Blacklist</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="empty_blacklist">Add apps</string>
    <string name="confirm">Confirm</string>
    <string name="removed_from_blacklist">removed from blacklist</string>
    <string name="undo">Undo</string>
    <string name="edit_place">change location</string>
    <string name="manage_apps">Manage apps</string>
    <string name="app_is_blocked">This app was blocked from Location Fence app.</string>
    <string name="label_hint">Label for this place (optional)</string>
    <string name="message_hint">Message to show on block screen (optional)</string>
    <string name="dialog_title">Grant permission</string>
    <string name="dialog_content">Go to settings to approve usage stats</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="background_service">Run in background</string>
    <string name="timer">Trigger timer</string>
    <string name="timer_hint">Here you can change frequency of apps monitoring</string>
    <string name="dialog_timer_title">Timer Settings</string>
    <string name="close">Close</string>
    <string name="period">Period = 8 sec</string>
    <string name="warning">WARNING: Smaller period leads to poor battery life</string>
    <string name="packageName">Package name</string>
    <string name="list_locations">Geofences</string>
    <string name="blocked_app">blocked app</string>
</resources>
