<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="16dp"
    android:layout_height="match_parent">
    <TextView
        android:text="@string/timer_hint"
        android:id="@+id/timer_hint"
        android:layout_width="wrap_content"
        android:lineSpacingMultiplier="1.2"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/warning"
        android:layout_width="wrap_content"
        android:layout_below="@id/timer_hint"
        android:lineSpacingMultiplier="1.2"
        android:textColor="@color/grey_dark"
        android:id="@+id/seekBar_warning"
        android:layout_marginBottom="16dp"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/period"
        android:textColor="@color/grey_dark"
        android:layout_width="wrap_content"
        android:layout_below="@id/seekBar_warning"
        android:layout_marginBottom="8dp"
        android:id="@+id/seekBar_period"
        android:layout_height="wrap_content" />
    <SeekBar
        android:layout_width="match_parent"
        android:layout_below="@id/seekBar_period"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar" />
    <TextView
        android:text="@integer/period_start"
        android:layout_width="wrap_content"
        android:id="@+id/lower_value"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/seekBar"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@integer/period_end"
        android:layout_below="@id/seekBar"
        android:layout_alignRight="@id/seekBar"
        android:layout_alignEnd="@id/seekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/button_close"
        android:layout_below="@id/lower_value"
        android:text="@string/close"
        android:padding="16dp"
        android:stateListAnimator="@null"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@color/transparent"
        android:layout_width="wrap_content"
        android:textColor="@color/colorAccent"
        android:layout_height="wrap_content" />
</RelativeLayout>